# rust-kernel-barebones

./: .gitignore  .gitmodules  README.md
r3_kernel/: Cargo.toml  x86_64_llvm.json
r3_kernel/.cargo/: config
r3_kernel/src/: linker.ld  main.rs
r3_kernel/src/cpu/: io.rs
tools/: enable_rust_toolchain.sh  get_bootloader_dependencies.sh  run_qemu.sh  setup_env.sh
tools/sub/: build_kernel.sh  get_cargo_prerequsites.sh
